--- a/BE_Project/Timiza/requirements.txt
+++ b/BE_Project/Timiza/requirements.txt
@@ -4,3 +4,5 @@ psycopg2-binary>=2.9,<3.0
 djangorestframework-simplejwt>=5.2,<6.0
 gunicorn>=20.1,<21.0
 whitenoise>=6.0,<7.0
+
+dj-database-url>=0.5.0
